--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -43,6 +43,7 @@ file.reference.javolution-5.4.5.jar=lib\\javolution-5.4.5.jar
 file.reference.log4j-1.2.15.jar=lib\\log4j-1.2.15.jar
 file.reference.mysql-connector-java-5.1.12-bin.jar=lib\\mysql-connector-java-5.1.12-bin.jar
 file.reference.mysql-connector-java-5.1.18-bin.jar=lib\\mysql-connector-java-5.1.18-bin.jar
+file.reference.protobuf-java-2.5.0.jar=lib\\protobuf-java-2.5.0.jar
 file.reference.slf4j-api.jar=lib\\slf4j-api.jar
 file.reference.slf4j-simple-1.6.6.jar=lib\\slf4j-simple-1.6.6.jar
 file.reference.spring-aop-3.2.1.RELEASE.jar=lib\\spring-aop-3.2.1.RELEASE.jar
@@ -77,7 +78,8 @@ javac.classpath=\
     ${file.reference.spring-core-3.2.1.RELEASE.jar}:\
     ${file.reference.spring-expression-3.2.1.RELEASE.jar}:\
     ${file.reference.spring-jdbc-3.2.1.RELEASE.jar}:\
-    ${file.reference.spring-tx-3.1.1.RELEASE.jar}
+    ${file.reference.spring-tx-3.1.1.RELEASE.jar}:\
+    ${file.reference.protobuf-java-2.5.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
